--- a/assets/bootstrap/css/climap.css
+++ b/assets/bootstrap/css/climap.css
@@ -2,3 +2,21 @@
     width: 100%;
     height: 100vh;
 }
+
+#map { 
+    position:absolute;
+    z-index:9999999;
+    top:50%; /* change to whatever you want */
+    right:50%; /* change to whatever you want */
+    border-radius: 25px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    width: 70vw;
+    transform: translate(+50%, -50%);
+}
+
+#carousel-1 {
+    position:relative;
+}
