--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html>
+
+{% block content %}
+{% load static %}
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>AugmentedHacks</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/climap.css">
+    <link rel="stylesheet" href="../../../assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../assets/bootstrap/css/climap.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="../../../assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
@@ -27,9 +28,9 @@
     </nav>
     <div class="carousel slide flex-shrink-1" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
         <div class="carousel-inner">
-            <div class="carousel-item active fitim"><img class="w-100 d-block" src="assets/img/scaled-lanscape-background.png" alt="Slide Image"></div>
-            <div class="carousel-item fitim"><img class="w-100 d-block" src="assets/img/intro-bg.jpg" alt="Slide Image"></div>
-            <div class="carousel-item fitim"><img class="w-100 d-block" src="assets/img/scaled-topography.png" alt="Slide Image"></div>
+            <div class="carousel-item active fitim"><img class="w-100 d-block" src="../../../assets/img/scaled-lanscape-background.png" alt="Slide Image"></div>
+            <div class="carousel-item fitim"><img class="w-100 d-block" src="../../../assets/img/intro-bg.jpg" alt="Slide Image"></div>
+            <div class="carousel-item fitim"><img class="w-100 d-block" src="../../../assets/img/scaled-topography.png" alt="Slide Image"></div>
         </div>
         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
         <ol class="carousel-indicators">
@@ -38,10 +39,11 @@
             <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
         </ol>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+    <script src="../../../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../../assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/grayscale.js"></script>
+    <script src="../../../assets/js/grayscale.js"></script>
 </body>
 
-</html>
+
+{% endblock %}
