--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -17,11 +17,11 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
     <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#">Climap</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/index">Climap</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item nav-link"><a class="nav-link active" href="/about">About</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="/explore">Explore</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="/climap">Explore</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="/contact">contact</a></li>
                 </ul>
             </div>
@@ -44,18 +44,18 @@
             <div class="row" data-aos="zoom-in">
                 <div class="col-lg-8 mx-auto">
                     <h2>About Climap</h2>
-                    <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You can try for yourself on&nbsp;<a href="#explore">the explore page</a>.&nbsp;</p>
+                    <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You can try for yourself on&nbsp;<a href="/climap">the explore page</a>.&nbsp;</p>
                     <p></p>
                     <p></p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="text-center download-section content-section" data-aos="slide-left" data-aos-once="true" id="download" style="background-image:url('../../static/assets/img/downloads-bg.jpg');">
+    <section class="text-center download-section content-section" data-aos="slide-left" data-aos-once="true" id="explore" style="background-image:url('../../static/assets/img/downloads-bg.jpg');">
         <div class="container">
             <div class="col-lg-8 mx-auto" data-aos="zoom-in" data-aos-once="true">
                 <h1>Try Climap</h1>
-                <p>You can play with the interactive map here:</p><button class="btn btn-primary btn-lg btn-default" type="button" data-bs-target="#explore">Explore Climap</button>
+                <p>You can play with the interactive map here:</p><button class="btn btn-primary btn-lg btn-default" type="button" data-bs-target="#explore" href="/climap">Explore Climap</button>
             </div>
         </div>
     </section>
@@ -67,7 +67,6 @@
                     <p></p>
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Google+</span></button></li>
-                        <li class="list-inline-item">&nbsp;</li>
                         <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></button></li>
                     </ul>
                 </div>
