this was a mistake

--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -34,7 +34,7 @@
     </nav>
     <div class="carousel slide flex-shrink-1" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
         <div id="map"></div>
-        <script src="assets/js/map.js"></script>
+        <script src="{% static 'assets/js/map.js' %}"></script>
         <div class="carousel-inner">
             <div class="carousel-item active fitim"><img class="w-100 d-block" src="{% static 'assets/img/scaled-lanscape-background.png' %}" alt="Slide Image"></div>
             <div class="carousel-item fitim"><img class="w-100 d-block" src="{% static 'assets/img/intro-bg.jpg'%}" alt="Slide Image"></div>
