this was a mistake

--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -66,8 +66,8 @@
                     <h2>Contact us</h2>
                     <p></p>
                     <ul class="list-inline banner-social-buttons">
-                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Google+</span></button></li>
-                        <li class="list-inline-item">&nbsp;<button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></button></li>
+                        <li class="list-inline-item">&nbsp;<button onclick="location.href='mailto:pollution.theglobaltech@gmail.com'" class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Google+</span></button></li>
+                        <li class="list-inline-item">&nbsp;<button onclick="location.href='https://github.com/alantian2018/Augmented_Hacks/'" class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></button></li>
                     </ul>
                 </div>
             </div>
