this was a mistake

--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -1,7 +1,6 @@
 {% block content %}
 {% load static %}
 
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -20,7 +19,7 @@
         <div class="container"><a class="navbar-brand" href="">Climap</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item nav-link"><a class="nav-link active" href="/about">About</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="/climap">Explore</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="/contact">contact</a></li>
                 </ul>
@@ -55,7 +54,7 @@
         <div class="container">
             <div class="col-lg-8 mx-auto" data-aos="zoom-in" data-aos-once="true">
                 <h1>Try Climap</h1>
-                <p>You can play with the interactive map here:</p><button class="btn btn-primary btn-lg btn-default" type="button" data-bs-target="#explore" href="/climap">Explore Climap</button>
+                <p>You can play with the interactive map here:</p><button class="btn btn-primary btn-lg btn-default" type="button" data-bs-target="#explore"  onclick="location.href='/climap'">Explore Climap</button>
             </div>
         </div>
     </section>
