--- a/AugmentedHacks/main/templates/about_us.html
+++ b/AugmentedHacks/main/templates/about_us.html
@@ -20,20 +20,21 @@
         <div class="container"><a class="navbar-brand" href="/">Climap</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item nav-link"><a class="nav-link active" href="/about">About</a></li>
+                    <li class="nav-item nav-link"><a class="nav-link " href="/about">About</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="/climap">Explore</a></li>
                     <li class="nav-item nav-link"><a class="nav-link" href="/contact">contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="color: black;background-image:url({%static 'assets/img/MtFuji.webp'%});padding:100px">
+    <header class="masthead" style="color: black;background-color:black;padding:100px">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">About Us</h1>
-                      <b>This pollution visualiser was developed during the <a href="https://www.augmentedhacks.org/">Augmented Hacks Hackathon</a> by a group of high school students</b>
+                    <div class="col-lg-8 mx-auto" style="">
+                        <h1 class="brand-heading" style="color:#f7f6f2">About Us</h1>
+                      <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">This population and temperature vizualiser was developed during the <a href="https://www.augmentedhacks.org/">Augmented Hacks Hackathon</a> by a group of high school students in the Bay Area</p>
+                        <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">Please see our <a href="https://github.com/alantian2018/Augmented_Hacks">github</a> for more information</p>
                     </div>
                 </div>
             </div>
@@ -45,6 +46,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="../../static/assets/js/grayscale.js"></script>
 </body>
+ <style>
+        header {
+            animation: fadeInAnimation ease 2s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+        }
+        @keyframes fadeInAnimation {
+            0% {
+                opacity: 0; transform: translateY(100%);
 
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+    </style>
 
 {% endblock %}
