--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -18,6 +18,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+    <script src="{% static 'assets/js/L.Map.Sync.js' %}"></script>
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
@@ -33,8 +34,17 @@
         </div>
     </nav>
     <div class="carousel slide flex-shrink-1" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
-        <div id="map"></div>
-        <script src="{% static 'assets/js/map.js' %}"></script>
+        <div id="main-page-content">
+            <div id="map-container">
+                <div id="map"></div>
+                <div id="pop-map"></div>
+            </div>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                <h9 id="demo"></h9>
+            </div>
+            <script src="{% static 'assets/js/map.js' %}"></script>
+        </div>
         <div class="carousel-inner">
             <div class="carousel-item active fitim"><img class="w-100 d-block" src="{% static 'assets/img/scaled-lanscape-background.png' %}" alt="Slide Image"></div>
             <div class="carousel-item fitim"><img class="w-100 d-block" src="{% static 'assets/img/intro-bg.jpg'%}" alt="Slide Image"></div>
