--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -20,6 +20,7 @@
                 crossorigin=""></script>
         <script src='https://unpkg.com/leaflet.tilelayer.gl@latest/src/Leaflet.TileLayer.GL'></script>
         <script src="{% static 'assets/js/L.Map.Sync.js' %}"></script>
+        <script src="{% static 'assets/dist/leaflet.ajax.js' %}"></script>
     </head>
 
     <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
