--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
         <link rel="stylesheet" href="../../static/assets/fonts/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+        <script>
+            var static_url = "{% get_static_prefix %}";
+        </script>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
               integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
               crossorigin=""/>
