--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>AugmentedHacks</title>
+        <title>Explore | Climap</title>
         <link rel="stylesheet" href="../../static/assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="../../static/assets/bootstrap/css/climap.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
@@ -46,25 +46,26 @@
                     <div id="map"></div>
                     <div id="pop-map"></div>
                 </div>
+
                 <div class="slidecontainer">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                    <h9 id="demo"></h9>
+                    <input type="range" min="2023" max="2123" value="2023" class="slider" id="myRange">
+                    <h9 id="demo" style="font-family:Helvetica"></h9>
                 </div>
                 <script src="{% static 'assets/js/map.js' %}"></script>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active fitim"><img class="w-100 d-block" src="{% static 'assets/img/scaled-lanscape-background.png' %}" alt="Slide Image"></div>
+                <div class="carousel-item active fitim"><img class="w-100 d-block" src="{% static 'assets/img/p1.jpg' %}" alt="Slide Image"></div>
                 <div class="carousel-item fitim"><img class="w-100 d-block" src="{% static 'assets/img/intro-bg.jpg' %}" alt="Slide Image"></div>
-                <div class="carousel-item fitim"><img class="w-100 d-block" src="{% static 'assets/img/scaled-topography.png' %}" alt="Slide Image"></div>
+                <div class="carousel-item fitim"><img class="w-100 d-block" src="{% static 'assets/img/p2.jpg' %}" alt="Slide Image"></div>
             </div>
             <div>
                 <a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
             </div>
-            <ol class="carousel-indicators">
+         <!--   <ol class="carousel-indicators">
                 <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
                 <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
                 <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
-            </ol>
+            </ol>-->
         </div>
         <script src="../../static/assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="../../static/assets/js/bs-init.js"></script>
