--- a/AugmentedHacks/static/assets/bootstrap/css/climap.css
+++ b/AugmentedHacks/static/assets/bootstrap/css/climap.css
@@ -18,8 +18,8 @@
 
 #map-container {
     position: relative;
-    width: 90vw;
-    height: 68vh
+    width: 100vw;
+    height: 80vh
 }
 
 #map { 
@@ -28,13 +28,13 @@
     top:50%;
     right:50%; */
     position:absolute;
-    border-radius: 25px;
+    /*border-radius: 25px;
     /* justify-content: center;
     align-items: center;
     text-align: center;
     display: flex; */
-    width: 90vw;
-    height: 68vh;
+    width: 100vw;
+    height: 80vh;
     /* transform: translate(+50%, -50%); */
 }
 
@@ -44,13 +44,13 @@
     top:50%;
     right:50%; */
     position:absolute;
-    border-radius: 25px;
+/*    border-radius: 25px;
     /* justify-content: center;
     align-items: center;
     text-align: center;
     display: flex; */
-    width: 90vw;
-    height: 68vh;
+    width: 100vw;
+    height: 80vh;
     /* transform: translate(+50%, -50%); */
 }
 
