--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -26,13 +26,13 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('../../static/assets/img/intro-bg.jpg');">
+    <header class="masthead" style="background-image:url('../../static/assets/img/intro-bg.jpg');font-family:Helvetica">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h1 class="brand-heading">Climap</h1>
-                        <p data-aos="fade-up" class="intro-text">Using advanced machine learning algorithms to identify future trends in climate change (yes climate change is real).</p><a class="btn btn-link btn-circle" role="button" data-aos="fade-up" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
+                        <p data-aos="fade-up" class="intro-text">Using machine learning algorithms to identify future trends in climate change and global warming.</p><a class="btn btn-link btn-circle" role="button" data-aos="fade-up" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <div class="row" data-aos="zoom-in">
                 <div class="col-lg-8 mx-auto">
                     <h2>About Climap</h2>
-                    <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You can try for yourself on&nbsp;<a href="/climap">the explore page</a>.&nbsp;</p>
+                    <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You can find our more on our&nbsp;<a href="https://github.com/alantian2018/Augmented_Hacks">github</a>.&nbsp;</p>
                     <p></p>
                     <p></p>
                 </div>
