--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('../../static/assets/img/intro-bg.jpg');font-family:Helvetica">
+    <header class="masthead" style="background-image:url('../../static/assets/img/intro-bg.jpg')">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
@@ -50,7 +50,7 @@
             </div>
         </div>
     </section>
-    <section class="text-center download-section content-section" data-aos="slide-left" data-aos-once="true" id="explore" style="background-image:url('../../static/assets/img/downloads-bg.jpg');">
+    <section class="text-center download-section content-section"   id="explore" style="background-image:url('../../static/assets/img/downloads-bg.jpg');">
         <div class="container">
             <div class="col-lg-8 mx-auto" data-aos="zoom-in" data-aos-once="true">
                 <h1>Try Climap</h1>
