--- a/AugmentedHacks/main/templates/about_us.html
+++ b/AugmentedHacks/main/templates/about_us.html
@@ -33,7 +33,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto" style="">
                         <h1 class="brand-heading" style="color:#f7f6f2">About Us</h1>
-                      <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">This population and temperature vizualizer was developed during the <a href="https://www.augmentedhacks.org/">Augmented Hacks Hackathon</a> by a group of high school students in the Bay Area</p>
+                      <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">This population and temperature visualizer was developed during the <a href="https://www.augmentedhacks.org/">Augmented Hacks Hackathon</a> by a group of high school students in the Bay Area</p>
                         <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">Please see our <a href="https://github.com/alantian2018/Augmented_Hacks">github</a> for more information</p>
                     </div>
                 </div>
