--- a/AugmentedHacks/main/templates/climap.html
+++ b/AugmentedHacks/main/templates/climap.html
@@ -24,6 +24,7 @@
         <script src='https://unpkg.com/leaflet.tilelayer.gl@latest/src/Leaflet.TileLayer.GL'></script>
         <script src="{% static 'assets/js/L.Map.Sync.js' %}"></script>
         <script src="{% static 'assets/dist/leaflet.ajax.js' %}"></script>
+        <link rel="icon" type="image/png" href="{% static 'assets/img/Iliketowatchtheworldburn.png' %}">
     </head>
 
     <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
@@ -61,11 +62,11 @@
             <div>
                 <a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
             </div>
-         <!--   <ol class="carousel-indicators">
-                <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
-                <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
-                <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
-            </ol>-->
+            <!--   <ol class="carousel-indicators">
+                   <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
+                   <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
+                   <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
+               </ol>-->
         </div>
         <script src="../../static/assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="../../static/assets/js/bs-init.js"></script>
