--- a/AugmentedHacks/main/templates/contact.html
+++ b/AugmentedHacks/main/templates/contact.html
@@ -1,60 +1,65 @@
-
 {% block content %}
-{% load static %}
+    {% load static %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact | Climap</title>
-    <link rel="stylesheet" href="../../static/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../static/assets/bootstrap/css/climap.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
-    <link rel="stylesheet" href="../../static/assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <title>Contact | Climap</title>
+        <link rel="stylesheet" href="../../static/assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../static/assets/bootstrap/css/climap.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
+        <link rel="stylesheet" href="../../static/assets/fonts/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+        <link rel="icon" type="image/png" href="{% static 'assets/img/Iliketowatchtheworldburn.png' %}">
+    </head>
 
-</head>
-
-<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
-    <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="/">Climap</a><button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item nav-link"><a class="nav-link" href="/about">About</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="/climap">Explore</a></li>
-                    <li class="nav-item nav-link"><a class="nav-link" href="/contact">contact</a></li>
-                </ul>
+    <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
+        <nav class="navbar navbar-light navbar-expand-md fixed-top" id="mainNav">
+            <div class="container"><a class="navbar-brand" href="/">Climap</a>
+                <button data-bs-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu">
+                    <i class="fa fa-bars"></i></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item nav-link"><a class="nav-link" href="/about">About</a></li>
+                        <li class="nav-item nav-link"><a class="nav-link" href="/climap">Explore</a></li>
+                        <li class="nav-item nav-link"><a class="nav-link" href="/contact">contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <header class="head" style="padding-top:15vh;padding-bottom:5vh; text-align:center">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Contact</h1>
+        </nav>
+        <header class="head" style="padding-top:15vh;padding-bottom:5vh; text-align:center">
+            <div class="intro-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 mx-auto">
+                            <h1 class="brand-heading">Contact</h1>
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <section  >
-        <div class="container " style="text-align:center">
-         <div class="">
+        </header>
+        <section>
+            <div class="container " style="text-align:center">
+                <div class="">
                     <ul class="list-inline banner-social-buttons">
-                        <li class="list-inline-item" >&nbsp;<button style="width:40vw;height:50vh;" onclick="location.href='mailto:pollution.theglobaltech@gmail.com'" class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Email</span></button></li>
-                        <li class="list-inline-item">&nbsp;<button style="width:40vw;height:50vh" onclick="location.href='https://github.com/alantian2018/Augmented_Hacks/'" class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;Github</span></button></li>
+                        <li class="list-inline-item">&nbsp;<button style="width:40vw;height:50vh;" onclick="location.href='mailto:pollution.theglobaltech@gmail.com'" class="btn btn-primary btn-lg btn-default" type="button">
+                            <i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Email</span></button>
+                        </li>
+                        <li class="list-inline-item">&nbsp;<button style="width:40vw;height:50vh" onclick="location.href='https://github.com/alantian2018/Augmented_Hacks/'" class="btn btn-primary btn-lg btn-default" type="button">
+                            <i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;Github</span></button>
+                        </li>
                     </ul>
-               </div>
-        </div>
-    </section>
+                </div>
+            </div>
+        </section>
 
-    <script src="../../static/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../../static/assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="../../static/assets/js/grayscale.js"></script>
-</body>
+        <script src="../../static/assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="../../static/assets/js/bs-init.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+        <script src="../../static/assets/js/grayscale.js"></script>
+    </body>
 
 
 {% endblock %}
