--- a/AugmentedHacks/main/templates/about_us.html
+++ b/AugmentedHacks/main/templates/about_us.html
@@ -39,6 +39,8 @@
                                 <a href="https://www.augmentedhacks.org/">Augmented Hacks Hackathon</a> by a group of high school students in the Bay Area</p>
                             <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">Please see our <a href="https://github.com/alantian2018/Augmented_Hacks">github</a> for
                                 more information</p>
+                            <p style="font-size:1.6em;color:#f7f6f2;font-family:Helvetica">By Alan T., Sooraj V., Aakash K., Aman M.</p>
+
                         </div>
                     </div>
                 </div>
