--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -73,7 +73,7 @@
                             <p></p>
                             <ul class="list-inline banner-social-buttons">
                                 <li class="list-inline-item">&nbsp;<button onclick="location.href='mailto:pollution.theglobaltech@gmail.com'" class="btn btn-primary btn-lg btn-default" type="button">
-                                    <i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Google+</span></button>
+                                    <i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Email</span></button>
                                 </li>
                                 <li class="list-inline-item">&nbsp;<button onclick="location.href='https://github.com/alantian2018/Augmented_Hacks/'" class="btn btn-primary btn-lg btn-default" type="button">
                                     <i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></button>
