--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -69,16 +69,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
-                            <h2>Contact us</h2>
-                            <p></p>
-                            <ul class="list-inline banner-social-buttons">
-                                <li class="list-inline-item">&nbsp;<button onclick="location.href='mailto:pollution.theglobaltech@gmail.com'" class="btn btn-primary btn-lg btn-default" type="button">
-                                    <i class="fa fa-google-plus fa-fw"></i><span class="network-name">&nbsp; Google+</span></button>
-                                </li>
-                                <li class="list-inline-item">&nbsp;<button onclick="location.href='https://github.com/alantian2018/Augmented_Hacks/'" class="btn btn-primary btn-lg btn-default" type="button">
-                                    <i class="fa fa-github fa-fw"></i><span class="network-name">&nbsp;github</span></button>
-                                </li>
-                            </ul>
+                            <h2>Our Project</h2>
+                            <iframe height="100%" src="https://youtu.be/5diupKrQ3Uc" allowfullscreen></iframe>
+                            </iframe>
                         </div>
                     </div>
                 </div>
