--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -70,7 +70,18 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2>Our Project</h2>
-                            <iframe height="100%" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
+                            <iframe height="30vh" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="text-center content-section" id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 mx-auto">
+                            <h2>Our Project</h2>
+                            <iframe height="30vh" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
                             </iframe>
                         </div>
                     </div>
