--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -70,7 +70,7 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2>Our Project</h2>
-                            <iframe style="height: 30vh" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
+                            <iframe style="height: 30vh; object-fit: cover" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
                             </iframe>
                         </div>
                         <h2>Contact us</h2>
