--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -50,8 +50,8 @@
                             <h2>About Climap</h2>
                             <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You
                                 can find our more on our&nbsp;<a href="https://github.com/alantian2018/Augmented_Hacks">github</a>.&nbsp;</p>
-                            <p></p>
-                            <p></p>
+                            <iframe style="height: 50vh; width: auto" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
+                            </iframe>
                         </div>
                     </div>
                 </div>
@@ -69,9 +69,6 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
-                            <h2>Our Project</h2>
-                            <iframe style="height: 50vh; object-fit: cover" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
-                            </iframe>
                         </div>
                         <h2>Contact us</h2>
                         <p></p>
