--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -49,8 +49,8 @@
                         <div class="col-lg-8 mx-auto">
                             <h2>About Climap</h2>
                             <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You
-                                can find our more on our&nbsp;<a href="https://github.com/alantian2018/Augmented_Hacks">github</a>.&nbsp;</p>
-                            <iframe style="height: 50vh; width: auto" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
+                                can find out more on our&nbsp;<a href="https://github.com/alantian2018/Augmented_Hacks">github</a>.&nbsp;</p>
+                            <iframe style="height: 50vh; width: fit-content" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
                             </iframe>
                         </div>
                     </div>
