--- a/AugmentedHacks/main/templates/home.html
+++ b/AugmentedHacks/main/templates/home.html
@@ -50,9 +50,8 @@
                             <h2>About Climap</h2>
                             <p>Climap is an an interactive map that allows you to specify locations and conditions and visualize how the climate will change in these regions. You
                                 can find out more on our&nbsp;<a href="https://github.com/alantian2018/Augmented_Hacks">github</a>.&nbsp;</p>
-                            <iframe width="100%" height="100%" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen></iframe>
+                            <iframe width="100%" height="100%" src="https://youtube.com/embed/5diupKrQ3Uc" allowfullscreen style="padding-bottom: 5%"></iframe>
                             </iframe>
-                            <br>
                         </div>
                     </div>
                 </div>
